argocd/apps/media-server/prowlarr/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  labels:
    app: prowlarr
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: prowlarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: America/Chicago
          image: ghcr.io/hotio/prowlarr:latest
          imagePullPolicy: Always
          name: prowlarr
          ports:
            - containerPort: 9696
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
          startupProbe:
            httpGet:
              path: /
              port: 9696
            initialDelaySeconds: 300
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 9696
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  labels:
    app: flaresolverr
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: flaresolverr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: flaresolverr
    spec:
      containers:
      - image: ghcr.io/flaresolverr/flaresolverr:latest
        imagePullPolicy: Always
        name: flaresolverr
        ports:
          - containerPort: 8191
            protocol: TCP
        startupProbe:
          httpGet:
            path: /
            port: 8191
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 8191
          initialDelaySeconds: 60
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 3
