argocd/apps/media-server/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prowlarr
  name: prowlarr
spec:
  ports:
    - name: http
      port: 9696
      targetPort: 9696
  selector:
    app: prowlarr
