argocd/apps/media-server/prowlarr/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  labels:
    app.kubernetes.io/instance: prowlarr-app
  name: prowlarr-httproute
  namespace: prowlarr
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-system
    sectionName: https
  hostnames:
  - prowlarr.yanello.net
  rules:
  - backendRefs:
    - name: prowlarr
      namespace: prowlarr
      port: 9696
      weight: 0
