argocd/apps/media-server/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  labels:
    app: prowlarr
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
    - host: prowlarr.yanello.net
      http:
        paths:
          - backend:
              service:
                name: prowlarr
                port:
                  number: 9696
            path: /
            pathType: Prefix
